fix z-index

--- a/vue/app.scss
+++ b/vue/app.scss
@@ -54,7 +54,7 @@ a {
     font-family: 'icomoon' !important;
     background-color: white;
     border-top: 1px solid #eee;
-    z-index: 1;
+    z-index: 10000;
     ul {
         box-sizing: border-box;
         overflow: hidden;
